@@ -84,6 +84,9 @@ User visible changes
 * Conforming with X3J13 writeup <DOTTED-LIST-ARGUMENTS:CLARIFY>, the first
   argument of LDIFF may now be a dotted list.
 
+* Renamed function SOCKET-STREAM-PEER-HOST to SOCKET-STREAM-PEER. New
+  functions SOCKET-STREAM-LOCAL and SOCKET-SERVER-HOST.
+
 * The functions MAKE-BROADCAST-STREAM, MAKE-CONCATENATED-STREAM,
   MAKE-TWO-WAY-STREAM, MAKE-ECHO-STREAM now verify that their arguments are
   input streams or output streams, respectively.
