@@ -4494,7 +4494,7 @@ This specification is subject to change.
 
 <DL>
 <DT>
-<CODE>(<STRONG>socket-server</STRONG> [<VAR>port-or-sock</VAR>])</CODE>
+<CODE>(<STRONG>socket-server</STRONG> [<VAR>port-or-socket</VAR>])</CODE>
 <DD>
 This function creates a socket, and binds a port the socket, and then
 listens for connect attempts.  The server exists to watch for client 
