@@ -1,3 +1,7 @@
+1998-12-15  Bruno Haible  <haible@linuix.math.u-bordeaux.fr>
+
+        * lispbibl.d (host_data): Adjust type definition to be valid C++.
+
 1998-12-15  Sam Steingold  <sds@goems.com>
 
 	* constsym.d: added `SOCKET-STREAM-LOCAL', renamed
